--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,8 @@
         "xstring": "cpp",
         "ostream": "cpp",
         "xstddef": "cpp",
-        "type_traits": "cpp"
+        "type_traits": "cpp",
+        "string": "cpp",
+        "xlocale": "cpp"
     }
 }
