--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,10 @@
         "string": "cpp",
         "xlocale": "cpp",
         "initializer_list": "cpp",
-        "vector": "cpp"
+        "vector": "cpp",
+        "chrono": "cpp",
+        "complex": "cpp",
+        "iterator": "cpp",
+        "__split_buffer": "cpp"
     }
 }
